--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>Nadpis</h1>
     <h2>Lorem 1</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta consectetur vel ullam blanditiis, molestiae rem fugiat corporis cumque, tempore animi aliquam maiores nemo culpa dolor. Id veniam quae dicta in.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta consectetur vel ullam blanditiis, molestiae rem
+        fugiat corporis cumque, tempore animi aliquam maiores nemo culpa dolor. Id veniam quae dicta in.</p>
     <h2>Lorem 2</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, assumenda officia! Ipsam repudiandae eveniet pariatur delectus, modi soluta praesentium corporis maiores. Unde officia quasi nam in praesentium aperiam reprehenderit quia!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat mollitia quae obcaecati. Temporibus at sapiente facilis labore modi alias iste? Nihil reiciendis et provident hic eius tempore! Similique, praesentium totam.</p>
 </body>
+
 </html>
